Make sure button have text aligned to the left

--- a/src/modules/blocks/event-datetime/style.pcss
+++ b/src/modules/blocks/event-datetime/style.pcss
@@ -41,6 +41,10 @@
 			display: inline-block;
 		}
 	}
+
+	.tribe-editor__btn--label {
+		text-align: left;
+	}
 }
 
 .tribe-editor__subtitle__footer {
